// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`!md marked BaseURL: md-baseurl-include-content 1`] = `
"<p>#MD Example</p>
<pre><code>🐞 content 
</code></pre>
<hr>
<details>
<summary>list</summary>

<h3 id=\\"items\\">Items</h3>
<ul>
<li>Vegetables</li>
<li>Fruits</li>
<li>Fish</li>
</ul>
</details>

<hr>
<table>
<thead>
<tr>
<th>First Header</th>
<th>Second Header</th>
</tr>
</thead>
<tbody><tr>
<td>Content Cell</td>
<td>Content Cell</td>
</tr>
<tr>
<td>Content Cell</td>
<td>Content Cell</td>
</tr>
</tbody></table>
<hr>
<ul>
<li>item</li>
<li>item</li>
<li>item</li>
</ul>
<p>###img
<img src=\\"/dist/path/img/img.png\\" alt=\\"img\\"  title=\\"title img\\" class=\\"zoom\\">
###deep img
<img src=\\"/dist/path/img/path/to/img/img.png\\" alt=\\"img\\"  title=\\"title deep img\\" class=\\"zoom\\"></p>
<pre><code class=\\"language-javascript\\">const a = &#39;string&#39;;
function b (arg) {
    console.log(&#39;b&#39;, arg)
}
b(a);
</code></pre>
"
`;

exports[`!md mdImageLoader: md-mdImageLoader-content 1`] = `
"<p>#MD Example</p>
<pre><code>🐞 content 
</code></pre>
<hr>
<details>
<summary>list</summary>

<h3 id=\\"items\\">Items</h3>
<ul>
<li>Vegetables</li>
<li>Fruits</li>
<li>Fish</li>
</ul>
</details>

<hr>
<table>
<thead>
<tr>
<th>First Header</th>
<th>Second Header</th>
</tr>
</thead>
<tbody><tr>
<td>Content Cell</td>
<td>Content Cell</td>
</tr>
<tr>
<td>Content Cell</td>
<td>Content Cell</td>
</tr>
</tbody></table>
<hr>
<ul>
<li>item</li>
<li>item</li>
<li>item</li>
</ul>
<p>###img
<img src=\\"/dist/path/img/img.png\\" alt=\\"img\\"  title=\\"title img\\" class=\\"zoom\\">
###deep img
<img src=\\"/dist/path/img/path/to/img/img.png\\" alt=\\"img\\"  title=\\"title deep img\\" class=\\"zoom\\"></p>
<pre><code class=\\"language-javascript\\">const a = &#39;string&#39;;
function b (arg) {
    console.log(&#39;b&#39;, arg)
}
b(a);
</code></pre>
"
`;

exports[`!md mdImageLoader: md-mdImageLoader-mdImageLoaderLog 1`] = `
Array [
  Object {
    "href": "./img.png",
    "state": Object {
      "context": "/__test__/documents",
      "docRoot": "",
      "from": "/__test__/documents/has-md-include.yaml",
      "resourcePath": "/__test__/documents/simple.md",
      "resourceQuery": "?",
      "rootContext": "",
    },
  },
  Object {
    "href": "./path/to/img/img.png",
    "state": Object {
      "context": "/__test__/documents",
      "docRoot": "",
      "from": "/__test__/documents/has-md-include.yaml",
      "resourcePath": "/__test__/documents/simple.md",
      "resourceQuery": "?",
      "rootContext": "",
    },
  },
]
`;

exports[`!md: md-include-content 1`] = `
"<p>#MD Example</p>
<pre><code>🐞 content 
</code></pre>
<hr>
<details>
<summary>list</summary>

<h3 id=\\"items\\">Items</h3>
<ul>
<li>Vegetables</li>
<li>Fruits</li>
<li>Fish</li>
</ul>
</details>

<hr>
<table>
<thead>
<tr>
<th>First Header</th>
<th>Second Header</th>
</tr>
</thead>
<tbody><tr>
<td>Content Cell</td>
<td>Content Cell</td>
</tr>
<tr>
<td>Content Cell</td>
<td>Content Cell</td>
</tr>
</tbody></table>
<hr>
<ul>
<li>item</li>
<li>item</li>
<li>item</li>
</ul>
<p>###img
<img src=\\"/img.png\\" alt=\\"img\\"  title=\\"title img\\" class=\\"zoom\\">
###deep img
<img src=\\"/path/to/img/img.png\\" alt=\\"img\\"  title=\\"title deep img\\" class=\\"zoom\\"></p>
<pre><code class=\\"language-javascript\\">const a = &#39;string&#39;;
function b (arg) {
    console.log(&#39;b&#39;, arg)
}
b(a);
</code></pre>
"
`;
